--- a/index.html
+++ b/index.html
@@ -19,14 +19,25 @@
       /* Style for dropdown controls */
 
       .controls {
-        text-align: center;
-        margin-bottom: 15px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: nowrap;
+        gap: 10px;
       }
 
+      .controls label {
+        display: flex;
+        align-items: center;
+        font-weight: 600;
+      }
+
+      .controls button,
       .controls select {
-        padding: 5px;
+        padding: 6px 10px;
         font-size: 14px;
-        margin: 0 5px;
+        margin: 4px;
+        min-width: 48px;
+        min-height: 44px;
       }
 
       /* Grid for weekdays and calendar days */
